--- a/Data/meshes/0SA/mod/0Sex/translate/_default_pandect.ini
+++ b/Data/meshes/0SA/mod/0Sex/translate/_default_pandect.ini
@@ -1,4 +1,4 @@
-﻿[GENDER CONJ]
+[GENDER CONJ]
 pFemale= "her"
 pMale= "his"
 pNone= "it's"
@@ -89,7 +89,7 @@ enterSpecialScenes= "Enter special scenes"
 nameKneelWithNameStand= "^N0 kneeling with ^N1 standing"
 
 [NAVEXPLANATION]
-liftedLotusEx= "^N0 lifting ^N1 off the ground while ^F1 wraps ^P1 legs around him."
+liftedLotusEx= "^N0 lifting ^N1 off the ground while ^F1 wraps ^P1 legs around ^W0."
 standingRevCuddlesEx= "^N0 and ^N1 standing together with ^N1 facing away and leaning against ^N0."
 standingAdoreEx= "^N0 and ^N1 standing together and holding each other."
 kneelingStraightEx= "^N0 standing with ^N1 kneeling before ^W0 with ^P1 body straightened."
@@ -99,16 +99,16 @@ cometEx= "^N0 kneeling with ^N1 standing and facing away while bending over."
 kneelingInLapEx= "^N0 and ^N1 kneeling together with ^N1 sitting in ^N0's lap."
 daddyEx= "^N0 kneeling on one foot while ^N1 sits on ^P0 knee."
 cabooserEx= "^N0 kneeling on one foot while bending ^N1 over ^P0 knee."
-doggyStyleLegsInEx= "^N0 crouching with ^N0 on all fours with legs tucked inside of ^N0's legs"
-doggyStyleLegsOutEx= "^N0 kneeling with ^N0 on all fours with legs spread to the outside of ^N0's legs"
-trunkEx= "^N0 kneeling with ^N0 on all fours bending over all the way with face down and ass up."
-mishVanillaEx= "^N0 laying down over ^N0 between ^P0 thighs and folding ^P0 her legs back and over ^W0 while ^F1 is reclined"
-mishFoldedEx= "^N0 kneel down between ^N0's thighs while ^F1 is reclined. "
-mishFlyingVEx= "^N0 kneeling and holding ^N0's legs up and spread apart while ^F1 is reclined."
-explorerEx= "^N0 laying down with ^P0 head between ^N0's legs while she is reclined."
-jupiterEx= "^N0 laying down with ^N1 kneeling at his side."
+doggyStyleLegsInEx= "^N0 crouching with ^N1 on all fours with legs tucked inside of ^N0's legs"
+doggyStyleLegsOutEx= "^N0 kneeling with ^N1 on all fours with legs spread to the outside of ^N0's legs"
+trunkEx= "^N0 kneeling with ^N1 on all fours bending over all the way with ^P1 face down and ass up."
+mishVanillaEx= "^N0 laying down over ^N1 between ^P1 thighs and folding ^P1 legs back and over ^W1 while ^F1 is reclined"
+mishFoldedEx= "^N0 kneeling down between ^N1's thighs while ^F1 is reclined. "
+mishFlyingVEx= "^N0 kneeling and holding ^N1's legs up and spread apart while ^F1 is reclined."
+explorerEx= "^N0 laying down with ^P0 head between ^N1's legs while ^F1 is reclined."
+jupiterEx= "^N0 laying down with ^N1 kneeling at ^P0 side."
 spooningEx= "^N0 and ^N1 laying down with ^N0 pressed against ^N1's backside."
-cowgirlEx= "^N0 laying down with ^N0 straddled on top of ^P0 body."
+cowgirlEx= "^N0 laying down with ^N1 straddled on top of ^P0 body."
 dualWieldEx= "^N0 and ^N1 are joined by a second male themed character."
 unicornEx= "^N0 and ^N1 are joined by a second female themed character."
 wizardSexEx= "^N0 using sorcerous powers to levitate and rotate ^N1 in the air."
@@ -158,9 +158,9 @@ sexEx= "All possible sexual intercourse where ^N0 is penetrating ^N1."
 blowJobsEx= "^N0 pleasuring ^N1's male anatomy using ^P0 mouth and sometimes in combination with ^P0 hands. @@CAPC1^F0 will wrap ^P0 lips around ^W1 to make sucking, pumping and stroking motions."
 handJobsEx= "^N0 pleasuring ^N1's male anatomy (and sometimes other nearby areas) using one or both of ^P0 hands. @@CAPC1^F0 will wrap ^P0 hand(s) around ^W1 to pump, stroke, carress, and fondle."
 jerkingEx= "^N0 pleasuring ^W0self using ^P0 hands while watching ^N1's body or face. @@CAPC1^F0 will wrap a hand around ^P0 male anatomy and stroke, rub and pump ^W0self."
-headEx= "Pleasuring the female anatomy with the mouth"
+headEx= "^N0 Pleasuring ^N1's female anatomy with ^P0 mouth"
 sexFemaleDrivenEx= "Sex between ^N0 and ^N1 lead by the motion and grinding of ^N1's body. @@CAPC1^F1 will bounce, grind, glide and wiggle her body with ^N0 inside of ^W1."
-sexMaleDrivenEx= "Sex between ^N0 and ^N1 lead by the motion of the ^N0's thrusting. @@CAPC1^F0 will primarily drive the sex by thrusting his hips while orienting ^N1 in variety of positions.
+sexMaleDrivenEx= "Sex between ^N0 and ^N1 lead by the motion of the ^N0's thrusting. @@CAPC1^F0 will primarily drive the sex by thrusting ^P0 hips while orienting ^N1 in variety of positions.
 rubAmpFingerEx= "Stimulating of ^N1's female anatomy by ^N0 using ^P0 fingers and thumbs. @@CAPC1^F0 will stuff and pump ^N1's using one or multiple fingers, or using ^P0 thumbs to rub and apply pressure."
 kissingEx= "Romantic kissing and other sensual and romantic gestures of the lips."
 embracingEx= "Romantic holding, embracing and caressing of one another."
