--- a/Data/meshes/0SA/mod/0Sex/translate/_default_pandect.ini
+++ b/Data/meshes/0SA/mod/0Sex/translate/_default_pandect.ini
@@ -160,7 +160,7 @@ handJobsEx= "^N0 pleasuring ^N1's male anatomy (and sometimes other nearby areas
 jerkingEx= "^N0 pleasuring ^W0self using ^P0 hands while watching ^N1's body or face. @@CAPC1^F0 will wrap a hand around ^P0 male anatomy and stroke, rub and pump ^W0self."
 headEx= "^N0 Pleasuring ^N1's female anatomy with ^P0 mouth"
 sexFemaleDrivenEx= "Sex between ^N0 and ^N1 lead by the motion and grinding of ^N1's body. @@CAPC1^F1 will bounce, grind, glide and wiggle her body with ^N0 inside of ^W1."
-sexMaleDrivenEx= "Sex between ^N0 and ^N1 lead by the motion of the ^N0's thrusting. @@CAPC1^F0 will primarily drive the sex by thrusting ^P0 hips while orienting ^N1 in variety of positions.
+sexMaleDrivenEx= "Sex between ^N0 and ^N1 lead by the motion of the ^N0's thrusting. @@CAPC1^F0 will primarily drive the sex by thrusting ^P0 hips while orienting ^N1 in variety of positions."
 rubAmpFingerEx= "Stimulating of ^N1's female anatomy by ^N0 using ^P0 fingers and thumbs. @@CAPC1^F0 will stuff and pump ^N1's using one or multiple fingers, or using ^P0 thumbs to rub and apply pressure."
 kissingEx= "Romantic kissing and other sensual and romantic gestures of the lips."
 embracingEx= "Romantic holding, embracing and caressing of one another."
