--- a/Data/meshes/0SA/mod/0Sex/translate/_default.ini
+++ b/Data/meshes/0SA/mod/0Sex/translate/_default.ini
@@ -1,4 +1,4 @@
-﻿[GENDER CONJ]
+[GENDER CONJ]
 pFemale= "her"
 pMale= "his"
 pNone= "it's"
@@ -365,7 +365,7 @@ slipOffEquip= "Slip ^P0 ^ESG0 off."
 
 [WIZARD]
 lowerYourselfToTheGround= "Lower yourself to the ground."
-hoverIntoTheAirWithSorcery= "Hover into the air with sorcery.
+hoverIntoTheAirWithSorcery= "Hover into the air with sorcery."
 letLegsFloatUp= "Let your legs float up."
 [T]
 useSorceryToLevitateW= "Use sorcery to levitate ^W0."
